<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/get_startedbg"
    tools:context=".GetStartedActivity">


   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.84" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.16" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.5" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.92" />

   <TextView
       android:id="@+id/get_started_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/teach"
       android:textAlignment="center"
       android:textSize="@dimen/large_font_size"
       android:fontFamily="@font/panton_bold_regular"
       android:textColor="@color/dark_font_color"
       app:layout_constraintBottom_toTopOf="@+id/get_started_description"
       app:layout_constraintEnd_toStartOf="@+id/guideline"
       app:layout_constraintStart_toStartOf="@+id/guideline2"
       app:layout_constraintTop_toTopOf="@+id/guideline3" />

   <TextView
       android:id="@+id/get_started_description"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:layout_marginBottom="20dp"
       android:fontFamily="@font/panton_bold_regular"
       android:textSize="@dimen/title_font_size"
       android:text="@string/app_get_started_description"
       android:textAlignment="center"
       app:layout_constraintBottom_toTopOf="@+id/signup_button_view"
       app:layout_constraintEnd_toStartOf="@+id/guideline"
       app:layout_constraintStart_toStartOf="@+id/guideline2"
       app:layout_constraintTop_toBottomOf="@+id/get_started_title" />


   <Button
       android:id="@+id/signup_button_view"
       style="@style/lightGreenButton"
       android:layout_marginTop="72dp"
       android:layout_marginBottom="8dp"
       android:text="@string/app_signup"
       app:layout_constraintBottom_toTopOf="@+id/login_button_view"
       app:layout_constraintEnd_toStartOf="@+id/guideline"
       app:layout_constraintStart_toStartOf="@+id/guideline2"
       app:layout_constraintTop_toBottomOf="@+id/get_started_description" />

   <Button
       android:id="@+id/login_button_view"
       style="@style/darkGreenButton"

       android:text="@string/app_login"
       app:layout_constraintBottom_toTopOf="@+id/guideline4"
       app:layout_constraintEnd_toStartOf="@+id/guideline"
       app:layout_constraintStart_toStartOf="@+id/guideline2"
       app:layout_constraintTop_toBottomOf="@+id/signup_button_view" />

</androidx.constraintlayout.widget.ConstraintLayout>